@@ -5,6 +5,8 @@
 #ifndef __C_ATTRIBUTES_H_INCLUDED__
 #define __C_ATTRIBUTES_H_INCLUDED__
 
+#include "IrrCompileConfig.h"
+
 #include "IAttributes.h"
 #include "IAttribute.h"
 
